Implementação inicial dos dados na area empilhada
